# lode

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  demo.tape  dist-workspace.toml  release-please-config.json
.github/workflows/: ci.yml  demo.yml  e2e.yml  publish-package-managers.yml  refresh-trusted-root.yml  release-please.yml  release.yml
docs/: commands.md  releasing.md  roadmap.md  signing.md
packaging/scoop/: lode.json
src/: atomic.rs  cli.rs  config.rs  hash.rs  http.rs  lib.rs  loader.rs  lock.rs  main.rs  manifest.rs  overlay.rs  packwiz.rs  paths.rs  provider.rs  provision.rs  resolve.rs  side.rs  ui.rs  version_req.rs  versions.rs
src/commands/: add.rs  bundle.rs  config.rs  del.rs  export.rs  get.rs  import.rs  init.rs  install.rs  list.rs  mod.rs  pin.rs  publish.rs  refresh.rs  update.rs  verify.rs  why.rs
src/providers/: curseforge.rs  mod.rs  modrinth.rs
tests/: manifest_parse.rs  packwiz_emit.rs
wix/: main.wxs
